<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/simulationTotalHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/raleway"
            android:text="@string/simulation_total_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/simulationTotalValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:digits="R$ 0123456789,."
            android:fontFamily="@font/raleway"
            android:gravity="center_horizontal"
            android:hint="@string/simulation_total_value_hint"
            android:inputType="numberDecimal"
            android:textSize="32sp"
            app:backgroundTint="#D3D3D3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/simulationTotalHint" />

        <TextView
            android:id="@+id/simulationDueDateHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/raleway"
            android:text="@string/simulation_duedate_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/simulationTotalValue" />

        <EditText
            android:id="@+id/simulationDueDateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/raleway"
            android:gravity="center_horizontal"
            android:hint="@string/simulation_duedate_value_hint"
            android:inputType="date"
            android:maxLength="10"
            android:textSize="32sp"
            app:backgroundTint="#D3D3D3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/simulationDueDateHint" />

        <TextView
            android:id="@+id/simulationPercentHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/raleway"
            android:text="@string/simulation_percent_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/simulationDueDateValue" />

        <EditText
            android:id="@+id/simulationPercentValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:digits="0123456789%"
            android:fontFamily="@font/raleway"
            android:gravity="center_horizontal"
            android:hint="@string/simulation_percent_value_hint"
            android:inputType="numberDecimal"
            android:textSize="32sp"
            app:backgroundTint="#D3D3D3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/simulationPercentHint" />

        <Button
            android:id="@+id/simulationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_button"
            android:enabled="false"
            android:fontFamily="@font/raleway"
            android:text="@string/simulation_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/simulationPercentValue"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>